@@ -1,34 +1,0 @@
-# $Id$
-# Maintainer: Corrado Primier <bardo@aur.archlinux.org>
-# Contributor: rabyte <rabyte.at.pen.dot.tj>
-
-pkgname=timidity-freepats
-pkgver=20060219
-pkgrel=5
-pkgdesc="A free and open set of instrument patches for use with softsynths"
-arch=('i686' 'x86_64')
-url="http://freepats.opensrc.org/"
-license=('GPL')
-depends=('timidity++')
-install=${pkgname}.install
-source=(http://freepats.opensrc.org/freepats-${pkgver}.tar.bz2
-        timidity-freepats.cfg)
-md5sums=('b947806304bc559a644a2c06deda8404' 'f9b5efafc6339a173d95e06cf7870d64')
-
-build() {
-  install -d ${startdir}/pkg/usr/share/timidity/freepats/{Drum,Tone}_000/
-  install -m644 ${startdir}/src/freepats/Drum_000/*.pat \
-      ${startdir}/pkg/usr/share/timidity/freepats/Drum_000/
-  install -m644 ${startdir}/src/freepats/Drum_000/*.txt \
-      ${startdir}/pkg/usr/share/timidity/freepats/Drum_000/
-  install -m644 ${startdir}/src/freepats/Tone_000/*.pat \
-      ${startdir}/pkg/usr/share/timidity/freepats/Tone_000/
-  install -m644 ${startdir}/src/freepats/Tone_000/*.txt \
-      ${startdir}/pkg/usr/share/timidity/freepats/Tone_000/
-  
-  install -Dm644 ${startdir}/src/freepats/crude.cfg \
-      ${startdir}/pkg/etc/timidity++/freepats/freepats.cfg
-  install -m644 ${startdir}/src/timidity-freepats.cfg ${startdir}/pkg/etc/timidity++/
-}
-
-# vim:set ts=2 sw=2 et:
